# sophia-0.0.2

./: README.md  pyproject.toml
app/: __init__.py  config.py  constants.py  models.py  views.py
migrations/: env.py
tests/: conftest.py  test_config.py  test_home.py
web/: package-lock.json
www/: next.config.js  package-lock.json  package.json
www/_posts/computer/: DiscreteMath.md  NetWork.md  Statistic and Probability.md  flask.md
www/components/: course-card.jsx  footer.jsx  home-computer.jsx  home-nav.jsx  home-slide.jsx  layout.jsx
www/pages/: _app.js  index.jsx
www/pages/chapter/: [chapterId].jsx
www/pages/course/: [courseId].jsx
www/pages/course/[courseId]/: index.jsx
www/pages/course/[courseId]/chapter/: [chapterId].jsx
www/pages/roadmap/: [roadmapId].jsx
www/styles/: globals.css
