[tool.poetry]
name = "sophia-0.0.2"
version = "0.0.2"
description = ""
authors = ["xiayulu <zuiaiqiansen@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
Flask-RESTful = "^0.3.8"
alembic = "^1.5.7"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.15.0"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.7.0"
Flask-Caching = "^1.10.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
